whasapp feature added get phone on signup and generate wp link

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -37,6 +37,6 @@
 
   <!-- Footer Section -->
   <footer class="footer-section">
-    <p>© 2025 Spendwise. Split expenses, simplify life.</p>
+    <p>© 2025 Spendwise. Keep tracking, Keep saving!🎯.</p>
   </footer>
 </div>
